2003-01-11  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03620] -m option and header
	* buffer.c (reshapeBuffer): fix reading from stdin
				fix -m option
	* display.c (redrawNLine): rewrite
		(redrawLine): return l instead of l->next
		(redrawLineImage): ditto
	* file.c (loadFile): read header even if skip header
		(loadGeneralFile): read header even if skip header
	* fm.h (SkipHeader): added
	* main.c (main): check whether reading from stdin
			SkipHeader

2003-01-10  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03619] Re: Error occured while reset
	* file.c (process_img): check image.ext
		(HTMLlineproc2body): check image.ext
		(loadImageBuffer): url, ext is in URLFile
	* frame.c (unloadFrame): no need to push to fileToDelete
		(copyFrame): no need to reset FB_TODELETE
		(resetFrameElement): f_body->source, buf->sourcefile
		(frame_download_source): buf->source
				buf->sourcefile reset
	* frame.h (FB_NOCACHE): deleted
		(FB_TODELETE): deleted
	* main.c (vmSrc): Currentbuf->sourcefile
			need_reshape if images exist

2003-01-09  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03617] sourcefile when Content-Encoding: is specified.
	* file.c (uncompress_stream): add src arg
		(examineFile): change uncompress_stream
		(loadGeneralFile): change uncompress_stream
		(doExternal): src
		(uncompress_stream): ext
				tmpfile with same ext

2003-01-09  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03616] Re: data: URL scheme
	* file.c (loadGeneralFile): check SCM_DATA
		(loadImageBuffer): newBuffer()
	* html.h (SCM_DATA): added
	* indep.c (url_unquote): deleted
		(Str_url_unquote): renamed from Str_form_unquote
				+ is decoded is_form only
	* indep.h (url_unquote): deleted
		(Str_url_unquote): added
		(Str_form_unquote): define by Str_url_unquote
	* main.c (followA): file_unquote
		(cmd_loadURL): file_unquote
	* url.c (DefaultPort): add for data:
		(schemetable): add "data"
		(DefaultFile): SCM_FTPDIR